force-app/main/default/objects/Google_Credential__mdt/Google_Credential__mdt.object-meta.xml
<CustomObject>
    <label>Google Credential</label>
    <pluralLabel>Google CredentialS</pluralLabel>
</CustomObject>