force-app/main/default/objects/Google_Credential__mdt/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>online</fullName>
                <default>true</default>
                <label>online</label>
            </value>
            <value>
                <fullName>offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>