force-app/main/default/objects/Google_Credential__mdt/fields/include_granted_scopes__c.field-meta.xml
<CustomField>
    <fullName>include_granted_scopes__c</fullName>
    <defaultValue>true</defaultValue>
    <label>include_granted_scopes</label>
    <type>Checkbox</type>
</CustomField>