force-app/main/default/objects/Google_Credential__mdt/fields/prompt__c.field-meta.xml
<CustomField>
    <fullName>prompt__c</fullName>
    <defaultValue>&quot;consent&quot;</defaultValue>
    <label>prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>