force-app/main/default/objects/Google_Credential__mdt/fields/Redirect_URI__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URI__c</fullName>
    <label>Redirect URI</label>
    <type>Url</type>
</CustomField>