force-app/main/default/objects/Google_Credential__mdt/fields/Token_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>Token_EndPoint__c</fullName>
    <label>Token EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>